--- a/app/src/main/res/layout/registration_standard_frag.xml
+++ b/app/src/main/res/layout/registration_standard_frag.xml
@@ -7,161 +7,149 @@
     android:layout_height="match_parent"
     tools:context="com.measurelet.Registration_standard_frag">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/opdel0.50"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.50" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/titleg0.2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.10" />
-
-    <TextView
-        android:id="@+id/cliquidtit"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        android:autoSizeTextType="uniform"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/titleg0.2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/opdel0.50"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/titleg0.2">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/sodavand"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:layout_weight="1"
-            android:background="@drawable/ripple"
-            android:drawableLeft="@drawable/ic_soda"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="Soda-\nvand\n500ml"
-            android:textAllCaps="false" />
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/opdel0.50"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/titleg0.2">
 
-        <Button
-            android:id="@+id/vand"
+            <Button
+                android:id="@+id/sodavand"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/ripple"
+                android:drawableTop="@drawable/ic_soda"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:paddingTop="10dp"
+
+                android:text="Sodavand \n500ml"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/vand"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/ripple"
+                android:drawableTop="@drawable/ic_glass_of_water"
+                android:elevation="0dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+
+                android:text="Vand\n175ml"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/juice"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/ripple"
+                android:drawableTop="@drawable/ic_orange_juice"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+
+                android:text="Juice\n200ml"
+                android:textAllCaps="false" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
             android:layout_weight="1"
-            android:background="@drawable/ripple"
-            android:drawableLeft="@drawable/ic_glass_of_water"
-            android:elevation="0dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:text="Vand\n175ml"
-            android:textAllCaps="false" />
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/opdel0.50"
+            app:layout_constraintTop_toTopOf="@+id/titleg0.2">
 
-        <Button
-            android:id="@+id/juice"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_weight="1"
-            android:background="@drawable/ripple"
-            android:drawableLeft="@drawable/ic_orange_juice"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:text="Juice\n200ml"
-            android:textAllCaps="false" />
+            <Button
+                android:id="@+id/kaffe"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/ripple"
+                android:drawableTop="@drawable/ic_coffee_cup"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:text="Kaffe \n 125 ml"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/saftevand"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/ripple"
+                android:drawableTop="@drawable/ic_pitcher"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+
+                android:text="Saft\n1000ml"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/andet"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/ripple"
+                android:drawableTop="@drawable/ic_more_horiz_black_24dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+
+                android:text="Andet"
+                android:textAllCaps="false" />
+        </LinearLayout>
+
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/opdel0.50"
-        app:layout_constraintTop_toTopOf="@+id/titleg0.2">
-
-        <Button
-            android:id="@+id/kaffe"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_weight="1"
-            android:background="@drawable/ripple"
-            android:drawableLeft="@drawable/ic_coffee_cup"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:text="@string/kaffeml"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/saftevand"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_weight="1"
-            android:background="@drawable/ripple"
-            android:drawableLeft="@drawable/ic_pitcher"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:text="Saft\n1000ml"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/andet"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_weight="1"
-            android:background="@drawable/ripple"
-            android:drawableLeft="@drawable/ic_more_horiz_black_24dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:text="Andet"
-            android:textAllCaps="false" />
-    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
