--- a/app/src/main/res/layout/list_daily.xml
+++ b/app/src/main/res/layout/list_daily.xml
@@ -1,49 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_weight="1"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tid_daily"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:paddingTop="10dp"
             android:text="Tid"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/ml_daily"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:paddingTop="10dp"
             android:text="Antal ml"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/type_daily"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:paddingLeft="15dp"
+            android:paddingTop="10dp"
             android:text="Væsketype"
+            android:textAlignment="textStart"
             android:textSize="18sp" />
 
-        <Button
-            android:id="@+id/rediger_daily"
-            android:layout_width="match_parent"
-            android:layout_height="38dp"
+        <ImageButton
+            android:id="@+id/imageButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Rediger"
-            android:textSize="14sp"
+            android:backgroundTint="@android:color/transparent"
+            android:elevation="0dp"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:tint="@color/colorAccent"
+            app:srcCompat="@android:drawable/ic_menu_edit" />
 
-            />
     </LinearLayout>
 
 </LinearLayout>
