--- a/app/src/main/res/layout/registration_standard_prove2.xml
+++ b/app/src/main/res/layout/registration_standard_prove2.xml
@@ -24,11 +24,11 @@
         android:textColor="@color/black" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/item_recycler_view"
+        android:id="@+id/standrecycle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true">
 
     </android.support.v7.widget.RecyclerView>
 
