--- a/app/src/main/res/layout/list_daily.xml
+++ b/app/src/main/res/layout/list_daily.xml
@@ -41,7 +41,7 @@
             android:textSize="18sp" />
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/edit_daily"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
